# glorIA

./: .gitignore  .gitmodules  LICENSE  README.md  RFL5DQN.py  RFL6PPO_custom_embeddings.py  Storage.py  check_encoding.json  fake_game.py  gen4abilities.json  gen4moves.json  gen4pokemon.json  log.txt  pyproject.toml
model/: agent.py  environment.py  evaluate.py  main.py  models.py  old_tf_file.py  train.py
src/gloria/: fake_game.py
src/gloria/MCTS/: montecarlo.py  simulator.py
src/gloria/embedding/: get_embeddings.py
src/gloria/embedding/data/: gen4abilities.json  gen4effects.json  gen4items.json  gen4moves.json  gen4pokemon.json
src/gloria/we_cooking/: get_embeddings.py
