[project]
name = "glorIA"
version = "0.1.0"
description = "A pokemon showdown AI using reinforcement learning"
authors = [
    {name = "yGifoom", email = "giovisano@gmail.com"},
]
dependencies = [
    "poke-env>=0.8.1",
    "asyncio>=3.4.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
